--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>My name is Aida and I'm learning to code through the part-time Software Engineering Program. </p>
